# philly

./: .gitignore  README.md  main.ipynb  philly.example.yml  pyproject.toml  update_datasets.py
.github/workflows/: publish.yaml
explorations/: index.html
explorations/311-service-equity-investigation/: 311_service_equity_investigation.py  census_tracts.geojson  index.html  neighborhoods_data.json  philadelphia_neighborhoods.geojson  tract_311_analysis.csv  tract_data.json  tract_metrics_with_demographics.csv
explorations/property-assessment-investigation/: historical_metrics.csv  index.html  property_assessment_investigation.py  quintile_analysis.csv  summary_stats.json  zip_analysis.csv
scripts/: load_all.py  update_datasets.py
src/cheesesnake/: __init__.py  cheesesnake.py  resource_loader.py  resources_loader.py
src/cheesesnake/datasets/: 2015_Parking_Meter___Kiosk_Inventory.yaml  ARCHIVED__Philadelphia_Food_Access.yaml  City_Owned_Properties.yaml  Complaints_Against_Police.yaml  DVRPC_s_Equity_Through_Access_Map_Toolkit.yaml  Dams.yaml  FEMA_Flood_Plain.yaml  Fatal_Crashes.yaml  Green_Stormwater_Infrastructure_Planning_Districts.yaml  Green_Stormwater_Infrastructure_Private_Projects.yaml  Green_Stormwater_Infrastructure_Public_Projects.yaml  Green_Stormwater_Infrastructure__GSI__Planning_Parcels.yaml  Licenses_and_Inspections_Clean_and_Seal.yaml  Licenses_and_Inspections_Complaints.yaml  Licenses_and_Inspections_District_Offices.yaml  Licenses_and_Inspections_Trade_Licenses.yaml  Licenses_and_Inspections__Case_Investigations.yaml  Outdoor_Advertising.yaml  PPR_Help_Locators.yaml  PWD_Sewersheds.yaml  PWD_Stormwater_Billing_Parcels.yaml  PWD_Stream_Sampling_Locations.yaml  Philadelphia_Neighborhoods.yaml  Rain_Barrels.yaml  Rain_Check_Installation_Sites.yaml  Rain_Gauges.yaml  RecycleBank_Participation.yaml  Street_Lane_Closure_Emergency_Utility_Network.yaml  Vacant_Property_Indicators_Percentage_by_Block.yaml
src/cheesesnake/models/: __init__.py  dataset.py  resource.py  search.py  yaml_enum.py
src/cheesesnake/services/: __init__.py  github.py  resources_loader.py
src/philly/: __init__.py  __main__.py  cache.py  config.py  filtering.py  filters.py  format_selection.py  loaders.py  metadata.py  philly.py  sample.py  search.py  streaming.py  updates.py  urls.py
src/philly/datasets/: 2009-2012_Police_Advisory_Commission_Complaints.yaml  Aerial_Photography__imagery_.yaml  Arterial_Streets.yaml  Big_Belly_Waste_Baskets__Trash_Bins_.yaml  Bike_Network.yaml  Boost_Your_Business_Program.yaml  Bridge_Locations.yaml  Building_Footprints.yaml  Bus_Shelters.yaml  COVID-19_Vaccinations.yaml  COVID_Cumulative_Historical_Snapshots.yaml  COVID_Deaths.yaml  COVID_Hospitalizations.yaml  COVID_Tests_and_Cases.yaml  Catalyst_Fund_Grants.yaml  Census_Tracts.yaml  (+159 more)
src/philly_cheesesnake/: loaders.py  philly_cheesesnake.py
src/phl/: cli.py
tests/: __init__.py  test_cache.py  test_cli.py  test_config.py  test_filtering.py  test_filters.py  test_format_selection.py  test_metadata.py  test_sample.py  test_search.py  test_updates.py
(+8 files in other folders)
